[package]
name = "hs110_energy_meter"
version = "0.1.0"
authors = ["Sven Kube <git@sven-kube.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
byteorder = "1.3.2"
hs100api = "0.1.1"
